internacionalização header Juliana

--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -7,6 +7,12 @@ tela.header.alterarExcluir      =Alterar/Excluir
 tela.header.statusDeVoo         =Status de Vôo
 tela.header.aeronave            =Aeronave
 tela.header.passagem            =Passagem
+tela.header.comprar             =Comprar
+tela.header.cancelar            =Cancelar
+tela.header.transferir          =Transferir
+tela.header.checkin             =Check-in
+tela.header.trocarDeUsuario     =Trocar de usu&aacute;rio
+tela.header.sairDoSistema       =Sair do sistema
 tela.titulo.pagina								=Venda de Passagens
 tela.sispassagem								=Sistema de Passagens A&eacute;reas
 tela.login.labelUsuario							=Usuário
