internacionalização home Juliana

--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -1,10 +1,10 @@
-tela.login.titulo                               =Login de Usuário
+tela.login.titulo                               =Login de UsuÃ¡rio
 tela.btn.entrar									=Entrar
 tela.header.inicio              =In&iacute;cio
-tela.header.voo                 =Vôo
+tela.header.voo                 =V&ocirc;o
 tela.header.cadastrar           =Cadastrar
 tela.header.alterarExcluir      =Alterar/Excluir
-tela.header.statusDeVoo         =Status de Vôo
+tela.header.statusDeVoo         =Status de V&ocirc;o
 tela.header.aeronave            =Aeronave
 tela.header.passagem            =Passagem
 tela.header.comprar             =Comprar
@@ -13,18 +13,22 @@ tela.header.transferir          =Transferir
 tela.header.checkin             =Check-in
 tela.header.trocarDeUsuario     =Trocar de usu&aacute;rio
 tela.header.sairDoSistema       =Sair do sistema
+tela.home.vendaDePassagens		=Venda de Passagens
+tela.home.bemVindo				= Bem vindo ao Sistema de Passagens A&eacute;reas
+tela.home.supervisor			=Supervisor
+tela.home.atendente				=Atendente
 tela.titulo.pagina								=Venda de Passagens
 tela.sispassagem								=Sistema de Passagens A&eacute;reas
-tela.login.labelUsuario							=Usuário
+tela.login.labelUsuario							=UsuÃ¡rio
 tela.login.labelSenha							=Senha
 tela.login.btnEntrar							=Entrar
-tela.inicio.titulo								=Sistema de Passagem Aérea
-tela.inicio.labelTexto							=Bem vindo ao Sistema de Passagem Aérea
+tela.inicio.titulo								=Sistema de Passagem AÃ©rea
+tela.inicio.labelTexto							=Bem vindo ao Sistema de Passagem AÃ©rea
 tela.inicio.labelnome							=Nome
 tela.inicio.labelperfil							=Perfil de acesso
 tela.inicio.labelUsuario						=Usuario
 tela.inicio.labelData							=Data 
-tela.inicio.titulobox							=Informações do Usuario
+tela.inicio.titulobox							=InformaÃ§Ãµes do Usuario
 tela.menu.ferramentas							=Ferramentas
 tela.menu.ferramentas.sair						=Sair
 tela.menu.ferramentas.logoff					=Encerrar
@@ -34,17 +38,17 @@ tela.menu.passagens.cancelar					=Cancelar Passagens
 tela.menu.passagens.transferir					=Transferir Passagens
 tela.menu.checkin								=Check-in
 tela.menu.checkin.realizarchekin				=Realizar Check-in
-tela.menu.voo									=Vôo
-tela.menu.voo.cadastrar							=Cadastrar Vôos
-tela.menu.voo.editar							=Editar Vôos
-tela.menu.voo.excluir							=Excluir Vôos
-tela.menu.voo.consultarstatus					=Consultar Status do Vôo
+tela.menu.voo									=VÃ´o
+tela.menu.voo.cadastrar							=Cadastrar VÃ´os
+tela.menu.voo.editar							=Editar VÃ´os
+tela.menu.voo.excluir							=Excluir VÃ´os
+tela.menu.voo.consultarstatus					=Consultar Status do VÃ´o
 tela.menu.aeronave								=Aeronave
 tela.menu.aeronave.cadastrar					=Cadastrar Aeronave
 tela.menu.aeronave.editar						=Editar Aeronave
 tela.menu.aeronave.excluir						=Excluir Aeronave
-tela.cadastrovoo.titulo							=Sistema de Passagens Aéreas - Cadastro de Vôo
-tela.cadastrovoo.titulobox						=Insira os Dados do Vôo
+tela.cadastrovoo.titulo							=Sistema de Passagens AÃ©reas - Cadastro de VÃ´o
+tela.cadastrovoo.titulobox						=Insira os Dados do VÃ´o
 tela.cadastrovoo.lblaeronave					=Aeronave
 tela.cadastrovoo.lbldata						=Data
 tela.cadastrovoo.lblhora						=Hora
@@ -64,22 +68,23 @@ tela.cadastrovoo.cbstatus.finalizado			=Finalizado
 tela.cadastrovoo.cbstatus.encerrado				=Encerrado
 tela.cadastrovoo.btncadastrar					=Cadastrar
 tela.cadastrovoo.btnlimpar						=Limpar
-tela.editarvoo.titulo							=Sistema de Passagens Aéreas - Editar Vôo
-tela.editarvoo.titulobox						=Selecione Vôo
-tela.excluirvoo.titulo							=Sistema de Passagens Aéreas - Excluir Vôo
-tela.excluiraeronave.titulo						=Sistema de Passagens Aéreas - Excluir Aeronave
-tela.editaraeronave.titulo						=Sistema de Passagens Aéreas - Editar Aeronave
-tela.cadastraeronave.titulo						=Sistema de Passagens Aéreas - Cadastro de Aeronave
+tela.editarvoo.titulo							=Sistema de Passagens AÃ©reas - Editar VÃ´o
+tela.editarvoo.titulobox						=Selecione VÃ´o
+tela.excluirvoo.titulo							=Sistema de Passagens AÃ©reas - Excluir VÃ´o
+tela.excluiraeronave.titulo						=Sistema de Passagens AÃ©reas - Excluir Aeronave
+tela.editaraeronave.titulo						=Sistema de Passagens AÃ©reas - Editar Aeronave
+tela.cadastraeronave.titulo						=Sistema de Passagens AÃ©reas - Cadastro de Aeronave
 tela.cadastraraeronave.titulobox 				=Insira dados da Aeronave
-tela.cadastraraeronave.lblCodigo 				=Código
+tela.cadastraraeronave.lblCodigo 				=CÃ³digo
 tela.cadastraraeronave.lblNome 					=Nome
 tela.cadastraraeronave.lblQtdAssentos 			=Quantidade de Assentos
-tela.cadastraraeronave.lblLocalAssentos 		=Localização dos Assentos
+tela.cadastraraeronave.lblLocalAssentos 		=LocalizaÃ§Ã£o dos Assentos
 tela.cadastraraeronave.btnCadastrar 			=Cadastrar
 tela.cadastraraeronave.btnLimparCampos 			=Limpar Campos
-tela.trnsferirpassagem.titulo					=Sistema de Passagens Aéreas - Transferir Passagem
-tela.comprarpassagem.titulo						=Sistema de Passagens Aéreas - Comprar Passagem
-tela.cancelarpassagem.titulo					=Sistema de Passagens Aéreas - Cancelar Passagem
-tela.checkin.titulo								=Sistema de Passagens Aéreas - Check-In
-tela.consultarvoo.titulo						=Sistema de Passagens Aéreas - Consultar Status do Vôo
-tela.consultarvoo.titulobox						=Status dos Vôos
+tela.trnsferirpassagem.titulo					=Sistema de Passagens AÃ©reas - Transferir Passagem
+tela.comprarpassagem.titulo						=Sistema de Passagens AÃ©reas - Comprar Passagem
+tela.cancelarpassagem.titulo					=Sistema de Passagens AÃ©reas - Cancelar Passagem
+tela.checkin.titulo								=Sistema de Passagens AÃ©reas - Check-In
+tela.consultarvoo.titulo						=Sistema de Passagens AÃ©reas - Consultar Status do VÃ´o
+tela.consultarvoo.titulobox						=Status dos VÃ´os
+
