internacionalização Alterar Aeronave Juliana

--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -1,22 +1,30 @@
 tela.login.titulo                               =Login de UsuÃ¡rio
 tela.btn.entrar									=Entrar
-tela.header.inicio              =In&iacute;cio
-tela.header.voo                 =V&ocirc;o
-tela.header.cadastrar           =Cadastrar
-tela.header.alterarExcluir      =Alterar/Excluir
-tela.header.statusDeVoo         =Status de V&ocirc;o
-tela.header.aeronave            =Aeronave
-tela.header.passagem            =Passagem
-tela.header.comprar             =Comprar
-tela.header.cancelar            =Cancelar
-tela.header.transferir          =Transferir
-tela.header.checkin             =Check-in
-tela.header.trocarDeUsuario     =Trocar de usu&aacute;rio
-tela.header.sairDoSistema       =Sair do sistema
-tela.home.vendaDePassagens		=Venda de Passagens
-tela.home.bemVindo				= Bem vindo ao Sistema de Passagens A&eacute;reas
-tela.home.supervisor			=Supervisor
-tela.home.atendente				=Atendente
+tela.header.inicio              				=In&iacute;cio
+tela.header.voo                 				=V&ocirc;o
+tela.header.cadastrar           				=Cadastrar
+tela.header.alterarExcluir      				=Alterar/Excluir
+tela.header.statusDeVoo         				=Status de V&ocirc;o
+tela.header.aeronave           					=Aeronave
+tela.header.passagem            				=Passagem
+tela.header.comprar             				=Comprar
+tela.header.cancelar            				=Cancelar
+tela.header.transferir          				=Transferir
+tela.header.checkin             				=Check-in
+tela.header.trocarDeUsuario     				=Trocar de usu&aacute;rio
+tela.header.sairDoSistema      					=Sair do sistema
+tela.home.vendaDePassagens						=Venda de Passagens
+tela.home.bemVindo								=Bem vindo ao Sistema de Passagens A&eacute;reas
+tela.home.supervisor							=Supervisor
+tela.home.atendente								=Atendente
+tela.alterarAeronave.alterarDados				=Alterar Dados da Aeronave
+tela.alterarAeronave.codDaAeronave				=Código da Aeronave
+tela.alterarAeronave.nomeDaAeronave				=Nome da Aeronave
+tela.alterarAeronave.tipoDeAeronave				=Tipo de Aeronave
+tela.alterarAeronave.localizaçãoDeAssentos		=Localização de Assentos
+tela.alterarAeronave.colunas					=Colunas
+tela.alterarAeronave.fileiras					=Fileiras
+tela.alterarAeronave.alterar					=Alterar
 tela.titulo.pagina								=Venda de Passagens
 tela.sispassagem								=Sistema de Passagens A&eacute;reas
 tela.login.labelUsuario							=UsuÃ¡rio
@@ -87,4 +95,5 @@ tela.cancelarpassagem.titulo					=Sistema de Passagens AÃ©reas - Cancelar Pass
 tela.checkin.titulo								=Sistema de Passagens AÃ©reas - Check-In
 tela.consultarvoo.titulo						=Sistema de Passagens AÃ©reas - Consultar Status do VÃ´o
 tela.consultarvoo.titulobox						=Status dos VÃ´os
+
 
