internacionalização Cad Aeronave Juliana

--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -25,6 +25,13 @@ tela.alterarAeronave.localizaçãoDeAssentos		=Localização de Assentos
 tela.alterarAeronave.colunas					=Colunas
 tela.alterarAeronave.fileiras					=Fileiras
 tela.alterarAeronave.alterar					=Alterar
+tela.cadAeronave.cadastroDeAeronave				=Cadastro de Aeronave
+tela.cadAeronave.codigoDaAeronave				=Código da Aeronave
+tela.cadAeronave.nomeDaAeronave					=Nome da Aeronave
+tela.cadAeronave.tipoDeAeronave					=Tipo de Aeronave
+tela.cadAeronave.localDeAssentos				=Localização de Assentos
+tela.cadAeronave.cadastrar						=Cadastrar
+tela.cadAeronave.cadAeroSucesso					=Cadastro de Aeronave realizado com Sucesso
 tela.titulo.pagina								=Venda de Passagens
 tela.sispassagem								=Sistema de Passagens A&eacute;reas
 tela.login.labelUsuario							=UsuÃ¡rio
