internacionalização consulta aeronave Juliana

--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -20,7 +20,7 @@ tela.home.atendente								=Atendente
 tela.alterarAeronave.alterarDados				=Alterar Dados da Aeronave
 tela.alterarAeronave.codDaAeronave				=Código da Aeronave
 tela.alterarAeronave.nomeDaAeronave				=Nome da Aeronave
-tela.alterarAeronave.tipoDeAeronave				=Tipo de Aeronave
+tela.alterarAeronave.tipoDeAeronave				=Tipo da Aeronave
 tela.alterarAeronave.localizaçãoDeAssentos		=Localização de Assentos
 tela.alterarAeronave.colunas					=Colunas
 tela.alterarAeronave.fileiras					=Fileiras
@@ -32,6 +32,9 @@ tela.cadAeronave.tipoDeAeronave					=Tipo de Aeronave
 tela.cadAeronave.localDeAssentos				=Localização de Assentos
 tela.cadAeronave.cadastrar						=Cadastrar
 tela.cadAeronave.cadAeroSucesso					=Cadastro de Aeronave realizado com Sucesso
+tela.consultaAeronave.consultaAeronave			=Consulta de Aeronaves
+tela.consultaAeronave.aeroAltComSucesso			=Dados da Aeronave alterados com Sucesso
+tela.consultaAeronave.aeroExcComSucesso			=Aeronave Excluida com Sucesso
 tela.titulo.pagina								=Venda de Passagens
 tela.sispassagem								=Sistema de Passagens A&eacute;reas
 tela.login.labelUsuario							=UsuÃ¡rio
@@ -90,7 +93,7 @@ tela.excluiraeronave.titulo						=Sistema de Passagens AÃ©reas - Excluir Aeron
 tela.editaraeronave.titulo						=Sistema de Passagens AÃ©reas - Editar Aeronave
 tela.cadastraeronave.titulo						=Sistema de Passagens AÃ©reas - Cadastro de Aeronave
 tela.cadastraraeronave.titulobox 				=Insira dados da Aeronave
-tela.cadastraraeronave.lblCodigo 				=CÃ³digo
+tela.cadastraraeronave.lblCodigo 				=Código
 tela.cadastraraeronave.lblNome 					=Nome
 tela.cadastraraeronave.lblQtdAssentos 			=Quantidade de Assentos
 tela.cadastraraeronave.lblLocalAssentos 		=LocalizaÃ§Ã£o dos Assentos
@@ -102,5 +105,4 @@ tela.cancelarpassagem.titulo					=Sistema de Passagens AÃ©reas - Cancelar Pass
 tela.checkin.titulo								=Sistema de Passagens AÃ©reas - Check-In
 tela.consultarvoo.titulo						=Sistema de Passagens AÃ©reas - Consultar Status do VÃ´o
 tela.consultarvoo.titulobox						=Status dos VÃ´os
-
 
