adicionando cadastro de clientes ao header.

--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -1,5 +1,6 @@
 tela.login.titulo                               =Login de UsuÃ¡rio
 tela.btn.entrar									=Entrar
+
 tela.header.inicio              				=In&iacute;cio
 tela.header.voo                 				=V&ocirc;o
 tela.header.cadastrar           				=Cadastrar
@@ -11,12 +12,16 @@ tela.header.comprar             				=Comprar
 tela.header.cancelar            				=Cancelar
 tela.header.transferir          				=Transferir
 tela.header.checkin             				=Check-in
-tela.header.trocarDeUsuario     				=Trocar de usu&aacute;rio
+tela.header.cliente             				=Clientes
+tela.header.clienteCadastrar       				=Cadastrar
 tela.header.sairDoSistema      					=Sair do sistema
+
+
 tela.home.vendaDePassagens						=Venda de Passagens
 tela.home.bemVindo								=Bem vindo ao Sistema de Passagens A&eacute;reas
 tela.home.supervisor							=Supervisor
 tela.home.atendente								=Atendente
+
 tela.alterarAeronave.alterarDados				=Alterar Dados da Aeronave
 tela.alterarAeronave.codDaAeronave				=Código da Aeronave
 tela.alterarAeronave.nomeDaAeronave				=Nome da Aeronave
@@ -25,6 +30,7 @@ tela.alterarAeronave.localizaçãoDeAssentos		=Localização de Assentos
 tela.alterarAeronave.colunas					=Colunas
 tela.alterarAeronave.fileiras					=Fileiras
 tela.alterarAeronave.alterar					=Alterar
+
 tela.cadAeronave.cadastroDeAeronave				=Cadastro de Aeronave
 tela.cadAeronave.codigoDaAeronave				=Código da Aeronave
 tela.cadAeronave.nomeDaAeronave					=Nome da Aeronave
@@ -32,6 +38,7 @@ tela.cadAeronave.tipoDeAeronave					=Tipo de Aeronave
 tela.cadAeronave.localDeAssentos				=Localização de Assentos
 tela.cadAeronave.cadastrar						=Cadastrar
 tela.cadAeronave.cadAeroSucesso					=Cadastro de Aeronave realizado com Sucesso
+
 tela.consultaAeronave.consultaAeronave			=Consulta de Aeronaves
 tela.consultaAeronave.aeroAltComSucesso			=Dados da Aeronave alterados com Sucesso
 tela.consultaAeronave.aeroExcComSucesso			=Aeronave Excluida com Sucesso
