--- a/src/exemplo_en_US.properties
+++ b/src/exemplo_en_US.properties
@@ -3,6 +3,7 @@ tela.login.labelTexto                           =Perform Login
 tela.login.labelUsuario                         =User
 tela.login.labelSenha                           =Password
 tela.login.btnEntrar							=Enter
+
 tela.inicio.titulo								=System of Airline Ticket
 tela.inicio.labelTexto							=Welcome to System of Airline Ticket
 tela.inicio.labelnome							=Name
@@ -69,3 +70,23 @@ tela.checkin.titulo								=System of Airline ticket - Check-In
 tela.consultarvoo.titulo						=System of Airline ticket - Status of flight
 tela.consultarvoo.titulobox						=Status of Flights
 
+
+-----------------------
+comprarPassagem.titulo=Buy Ticket
+forma.pagamento.cartao=Credit Card
+forma.pagamento.cheque=Check
+rotulo.forma.pag=Forms of Payment
+rotulo.valor.total=Amount (R$)
+rotulo.tipo.cartao=Type of Card
+rotulo.nome.titular=Name on Card
+rotulo.cpf=CPF
+rotulo.numero.cartao=Credit Card Number
+rotulo.data.validade=Expiration Date
+rotulo.cod.seguranca=Security Code
+rotulo.banco=Bank
+rotulo.agencia=Agency
+rotulo.conta=Account
+
+tela.cadDCliente.bebe                   		=Baby
+tela.cadDCliente.adulto                     	=Adults
+tela.cadDCliente.crianca                    	=Children
