--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -1,4 +1,8 @@
 tela.login.titulo                               =Login de Usuário
+tela.login.labelUsuario							=Usuário
+tela.login.labelSenha							=Senha
+tela.login.btnEntrar							=Entrar
+
 tela.btn.entrar									=Entrar
 tela.header.inicio              				=Início
 tela.header.voo                 				=Voo
@@ -44,13 +48,12 @@ tela.cadDCliente.nome                       	=Nome
 tela.cadDCliente.sobrenome                  	=Sobrenome
 tela.cadDCliente.dataDeNascimento           	=Data de nascimento
 tela.cadDCliente.crianca                    	=Criança
+tela.cadDCliente.bebe                   		=Bebê
 
 
 tela.titulo.pagina								=Venda de Passagens
 tela.sispassagem								=Sistema de Passagens Aéreas
-tela.login.labelUsuario							=Usuário
-tela.login.labelSenha							=Senha
-tela.login.btnEntrar							=Entrar
+
 tela.inicio.titulo								=Sistema de Passagem Aéreas
 tela.inicio.labelTexto							=Bem vindo ao Sistema de Passagem Aéreas
 tela.inicio.labelnome							=Nome
@@ -117,3 +120,21 @@ tela.checkin.titulo								=Sistema de Passagens Aéreas - Check-In
 tela.consultarvoo.titulo						=Sistema de Passagens Aéreas - Consultar Status do Voo
 tela.consultarvoo.titulobox						=Status dos Voos
 
+
+
+
+--------------------
+comprarPassagem.titulo=Comprar Passagem
+forma.pagamento.cartao=Cartão de Crédito
+forma.pagamento.cheque=Cheque
+rotulo.forma.pag=Forma de Pagamento
+rotulo.valor.total=Valor Total (R$)
+rotulo.tipo.cartao=Tipo de Cartão
+rotulo.nome.titular=Nome do Titular
+rotulo.cpf=CPF
+rotulo.numero.cartao=Número do Cartão
+rotulo.data.validade=Data de Validade
+rotulo.cod.seguranca=Código de Seguranca
+rotulo.banco=Banco
+rotulo.agencia=Agência
+rotulo.conta=Conta
