--- a/src/exemplo_en_US.properties
+++ b/src/exemplo_en_US.properties
@@ -39,8 +39,8 @@ tela.cadastrovoo.lblorigem						=Origin
 tela.cadastrovoo.lbldestino						=Destiny
 tela.cadastrovoo.lblescalas						=Scale
 tela.cadastrovoo.lbltipo						=Type
-tela.cadastrovoo.lblstatus						=Status
-tela.cadastrovoo.cbstatus.escolha				= -- Choose Status --
+voo.lblstatus						=Status
+voo.cbstatus.escolha				= -- Choose Status --
 tela.cadastrovoo.cbstatus.confirmado			=Confirmee
 tela.cadastrovoo.cbstatus.cancelado				=Cancelled
 tela.cadastrovoo.cbstatus.atrasado				=Late
@@ -70,8 +70,26 @@ tela.checkin.titulo								=System of Airline ticket - Check-In
 tela.consultarvoo.titulo						=System of Airline ticket - Status of flight
 tela.consultarvoo.titulobox						=Status of Flights
 
+tela.cadDCliente.bebe                   		=Baby
+tela.cadDCliente.adulto                     	=Adults
+tela.cadDCliente.crianca                    	=Children
+
 
 -----------------------
+rotulo.forma.trat=Title
+rotulo.nome=First Name
+rotulo.sobrenome=Last Name
+rotulo.data.nasc=Date of Birth
+rotulo.tipo.pass=Type of Passenger
+rotulo.email=E-mail
+rotulo.telefone=Phone Number
+forma.trat.sr=Mr.
+forma.trat.srta=Miss
+forma.trat.sra=Ms.
+tipo.pass.bebe=Baby
+tipo.pass.crianca=Children
+tipo.pass.adulto=Adults
+
 comprarPassagem.titulo=Buy Ticket
 forma.pagamento.cartao=Credit Card
 forma.pagamento.cheque=Check
@@ -87,6 +105,11 @@ rotulo.banco=Bank
 rotulo.agencia=Agency
 rotulo.conta=Account
 
-tela.cadDCliente.bebe                   		=Baby
-tela.cadDCliente.adulto                     	=Adults
-tela.cadDCliente.crianca                    	=Children
+
+mensagem.cadastrar.exito=Register Accomplished Successfully!
+mensagem.cadastrar.erro=Register not Accomplished Successfully!
+mensagem.consulta.dado.nao.encontrado=Data Query Not Found!
+mensagem.alterar.exito=Change Accomplished Successfully!
+mensagem.alterar.erro=Change not Accomplished Successfully!
+mensagem.excluir.exito=Exclusion Accomplished Successfully!
+mensagem.excluir.erro=Exclusion not Accomplished Successfully!
