--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -124,6 +124,20 @@ tela.consultarvoo.titulobox						=Status dos Voos
 
 
 --------------------
+rotulo.forma.trat=Forma de Tratamento
+rotulo.nome=Nome
+rotulo.sobrenome=Sobrenome
+rotulo.data.nasc=Data de Nascimento
+rotulo.tipo.pass=Tipo de Passageiro
+rotulo.email=E-mail:
+rotulo.telefone=Telefone
+forma.trat.sr=Sr.
+forma.trat.srta=Srta.
+forma.trat.sra=Sra.
+tipo.pass.bebe=Bebê
+tipo.pass.crianca=Criança
+tipo.pass.adulto=Adulto
+
 comprarPassagem.titulo=Comprar Passagem
 forma.pagamento.cartao=Cartão de Crédito
 forma.pagamento.cheque=Cheque
@@ -138,3 +152,12 @@ rotulo.cod.seguranca=Código de Seguranca
 rotulo.banco=Banco
 rotulo.agencia=Agência
 rotulo.conta=Conta
+
+
+mensagem.cadastrar.exito=Cadastro Realizado com Sucesso!
+mensagem.cadastrar.erro=Cadastro não Realizado com Sucesso!
+mensagem.consulta.dado.nao.encontrado=Dados da Consulta Não Encontrados!
+mensagem.alterar.exito=Alteração Realizada com Sucesso!
+mensagem.alterar.erro=Alteração não Realizado com Sucesso!
+mensagem.excluir.exito=Exclusão Realizada com Sucesso!
+mensagem.excluir.erro=Exclusão não Realizado com Sucesso!
