--- a/src/exemplo_en_US.properties
+++ b/src/exemplo_en_US.properties
@@ -3,6 +3,7 @@ tela.login.labelTexto                           =Perform Login
 tela.login.labelUsuario                         =User
 tela.login.labelSenha                           =Password
 tela.login.btnEntrar							=Enter
+tela.login.mensagem.invalidos=Login or Password incorrect!
 
 tela.inicio.titulo								=System of Airline Ticket
 tela.inicio.labelTexto							=Welcome to System of Airline Ticket
@@ -25,29 +26,34 @@ tela.menu.voo.cadastrar							=Register flight
 tela.menu.voo.editar							=Edit flight
 tela.menu.voo.excluir							=Delete flight
 tela.menu.voo.consultarstatus					=Status of flight
-tela.cadastrovoo.lblvalor						=Value
+
+tela.titulo.pagina=Ticket Sales
+tela.sispassagem	= System of Airline Ticket
+
 tela.menu.aeronave								=Aircraft
 tela.menu.aeronave.cadastrar					=Register Aircraft
 tela.menu.aeronave.editar						=Edit Aircraft
 tela.menu.aeronave.excluir						=Delete Aircraft
-tela.cadastrovoo.titulo							=System of Airline Ticket - Register flight
-tela.cadastrovoo.titulobox						=Enter the date of flight
-tela.cadastrovoo.lblaeronave					=Aircraft
-tela.cadastrovoo.lbldata						=Date
-tela.cadastrovoo.lblhora						=Time
-tela.cadastrovoo.lblorigem						=Origin
-tela.cadastrovoo.lbldestino						=Destiny
-tela.cadastrovoo.lblescalas						=Scale
-tela.cadastrovoo.lbltipo						=Type
-voo.lblstatus						=Status
-voo.cbstatus.escolha				= -- Choose Status --
-tela.cadastrovoo.cbstatus.confirmado			=Confirmee
-tela.cadastrovoo.cbstatus.cancelado				=Cancelled
-tela.cadastrovoo.cbstatus.atrasado				=Late
-tela.cadastrovoo.cbstatus.embarque				=Embark
-tela.cadastrovoo.cbstatus.finalizado			=Finalize
-tela.cadastrovoo.cbstatus.espera 				=Waiting
-tela.cadastrovoo.cbstatus.encerrado				=Closed
+voo.titulo							=System of Airline Ticket - Register flight
+voo.titulobox						=Enter the date of flight
+voo.lblaeronave					=Aircraft
+voo.lbldata						=Date
+voo.lblhora						=Time
+voo.lblorigem						=Origin
+voo.lbldestino						=Destiny
+voo.lblescalas1						=Scale 1
+voo.lblescalas2						=Scale 2
+voo.lbltipo						=Type
+voo.lblvalor						=Value
+voo.lblstatus									=Status
+voo.cbstatus.escolha							= -- Choose Status --
+voo.cbstatus.confirmado							=Confirmee
+voo.cbstatus.cancelado							=Cancelled
+voo.cbstatus.atrasado							=Late
+voo.cbstatus.embarque							=Embark
+voo.cbstatus.finalizado							=Finalize
+voo.cbstatus.espera 							=Waiting
+voo.cbstatus.encerrado							=Closed
 tela.cadastrovoo.btncadastrar					=Register
 tela.cadastrovoo.btnlimpar						=Clean
 tela.editarvoo.titulo							=System of Airline ticket - Edit flight
@@ -57,7 +63,7 @@ tela.excluiraeronave.titulo						=System of Airline ticket - Delete Aircraft
 tela.editaraeronave.titulo						=System of Airline ticket - Edit Aircraft
 tela.cadastraeronave.titulo						=System of Airline ticket - Register Aircraft
 tela.cadastraraeronave.titulobox				=Enter the date of flight
-tela.cadastraraeronave.lblCodigo				=Code
+lblCodigo				=Code
 tela.cadastraraeronave.lblNome					=Name
 tela.cadastraraeronave.lblQtdAssentos			=Quantity of seats
 tela.cadastraraeronave.lblLocalAssentos			=Location of seats
