--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -2,6 +2,33 @@ tela.login.titulo                               =Login de Usuário
 tela.login.labelUsuario							=Usuário
 tela.login.labelSenha							=Senha
 tela.login.btnEntrar							=Entrar
+tela.login.mensagem.invalidos=Login ou Senha incorretos!
+
+tela.inicio.titulo								=Sistema de Passagem Aéreas
+tela.inicio.labelTexto							=Bem vindo ao Sistema de Passagem Aéreas
+tela.inicio.labelnome							=Nome
+tela.inicio.labelperfil							=Perfil de acesso
+tela.inicio.labelUsuario						=Usuario
+tela.inicio.labelData							=Data 
+tela.inicio.titulobox							=Informações do Usuario
+tela.menu.ferramentas							=Ferramentas
+tela.menu.ferramentas.sair						=Sair
+tela.menu.ferramentas.logoff					=Encerrar
+tela.menu.passagens								=Passagens
+tela.menu.passagens.comprar						=Comprar Passagens
+tela.menu.passagens.cancelar					=Cancelar Passagens
+tela.menu.passagens.transferir					=Transferir Passagens
+tela.menu.checkin								=Check-in
+tela.menu.checkin.realizarchekin				=Realizar Check-in
+tela.menu.voo									=Voo
+tela.menu.voo.cadastrar							=Cadastrar Voo
+tela.menu.voo.editar							=Editar Voo
+tela.menu.voo.excluir							=Excluir Voo
+tela.menu.voo.consultarstatus					=Consultar Status do Voo
+tela.menu.aeronave								=Aeronave
+tela.menu.aeronave.cadastrar					=Cadastrar Aeronave
+tela.menu.aeronave.editar						=Editar Aeronave
+tela.menu.aeronave.excluir						=Excluir Aeronave
 
 tela.btn.entrar									=Entrar
 tela.header.inicio              				=Início
@@ -54,50 +81,29 @@ tela.cadDCliente.bebe                   		=Bebê
 tela.titulo.pagina								=Venda de Passagens
 tela.sispassagem								=Sistema de Passagens Aéreas
 
-tela.inicio.titulo								=Sistema de Passagem Aéreas
-tela.inicio.labelTexto							=Bem vindo ao Sistema de Passagem Aéreas
-tela.inicio.labelnome							=Nome
-tela.inicio.labelperfil							=Perfil de acesso
-tela.inicio.labelUsuario						=Usuario
-tela.inicio.labelData							=Data 
-tela.inicio.titulobox							=Informações do Usuario
-tela.menu.ferramentas							=Ferramentas
-tela.menu.ferramentas.sair						=Sair
-tela.menu.ferramentas.logoff					=Encerrar
-tela.menu.passagens								=Passagens
-tela.menu.passagens.comprar						=Comprar Passagens
-tela.menu.passagens.cancelar					=Cancelar Passagens
-tela.menu.passagens.transferir					=Transferir Passagens
-tela.menu.checkin								=Check-in
-tela.menu.checkin.realizarchekin				=Realizar Check-in
-tela.menu.voo									=Voo
-tela.menu.voo.cadastrar							=Cadastrar Voo
-tela.menu.voo.editar							=Editar Voo
-tela.menu.voo.excluir							=Excluir Voo
-tela.menu.voo.consultarstatus					=Consultar Status do Voo
-tela.menu.aeronave								=Aeronave
-tela.menu.aeronave.cadastrar					=Cadastrar Aeronave
-tela.menu.aeronave.editar						=Editar Aeronave
-tela.menu.aeronave.excluir						=Excluir Aeronave
+
+
+
 tela.cadastrovoo.titulo							=Sistema de Passagens Aéreas - Cadastro de Voo
-tela.cadastrovoo.titulobox						=Insira os Dados do Voo
-tela.cadastrovoo.lblaeronave					=Aeronave
-tela.cadastrovoo.lbldata						=Data
-tela.cadastrovoo.lblhora						=Hora
-tela.cadastrovoo.lblorigem						=Origem
-tela.cadastrovoo.lbldestino						=Destino
-tela.cadastrovoo.lblescalas						=Escalas
-tela.cadastrovoo.lbltipo						=Tipo
-tela.cadastrovoo.lblstatus						=Status
-tela.cadastrovoo.lblvalor						=Valor
-tela.cadastrovoo.cbstatus.escolha				= -- Escolha o Status --
-tela.cadastrovoo.cbstatus.confirmado			=Confirmado
-tela.cadastrovoo.cbstatus.cancelado				=Cancelado
-tela.cadastrovoo.cbstatus.atrasado				=Atrasado
-tela.cadastrovoo.cbstatus.embarque				=Embarque
-tela.cadastrovoo.cbstatus.espera 				= Em espera
-tela.cadastrovoo.cbstatus.finalizado			=Finalizado
-tela.cadastrovoo.cbstatus.encerrado				=Encerrado
+voo.titulobox						=Insira os Dados do Voo
+voo.lblaeronave					=Aeronave
+voo.lbldata						=Data
+voo.lblhora						=Hora
+voo.lblorigem						=Origem
+voo.lbldestino						=Destino
+voo.lblescalas1						=Escala 1
+voo.lblescalas2						=Escala 2
+voo.lbltipo						=Tipo
+voo.lblvalor						=Valor
+voo.lblstatus									=Status
+voo.cbstatus.escolha							= -- Escolha o Status --
+voo.cbstatus.confirmado							=Confirmado
+voo.cbstatus.cancelado							=Cancelado
+voo.cbstatus.atrasado							=Atrasado
+voo.cbstatus.embarque							=Embarque
+voo.cbstatus.espera 							= Em espera
+voo.cbstatus.finalizado							=Finalizado
+voo.cbstatus.encerrado							=Encerrado
 tela.cadastrovoo.btncadastrar					=Cadastrar
 tela.cadastrovoo.btnlimpar						=Limpar
 tela.editarvoo.titulo							=Sistema de Passagens Aéreas - Editar Voo
@@ -107,7 +113,7 @@ tela.excluiraeronave.titulo						=Sistema de Passagens Aéreas - Excluir Aeronave
 tela.editaraeronave.titulo						=Sistema de Passagens Aéreas - Editar Aeronave
 tela.cadastraeronave.titulo						=Sistema de Passagens Aéreas - Cadastro de Aeronave
 tela.cadastraraeronave.titulobox 				=Insira dados da Aeronave
-tela.cadastraraeronave.lblCodigo 				=Código
+lblCodigo 				=Código
 tela.cadastraraeronave.lblNome 					=Nome
 tela.cadastraraeronave.lblQtdAssentos 			=Quantidade de Assentos
 tela.cadastraraeronave.lblLocalAssentos 		=Localização dos Assentos
