--- a/src/exemplo_en_US.properties
+++ b/src/exemplo_en_US.properties
@@ -80,7 +80,7 @@ tela.cadDCliente.bebe                   		=Baby
 tela.cadDCliente.adulto                     	=Adults
 tela.cadDCliente.crianca                    	=Children
 
-
+tela.btn.entrar  = Enter
 -----------------------
 rotulo.forma.trat=Title
 rotulo.nome=First Name
