--- a/src/exemplo_en_US.properties
+++ b/src/exemplo_en_US.properties
@@ -5,6 +5,7 @@ tela.login.labelSenha                           =Password
 tela.login.btnEntrar							=Enter
 tela.login.mensagem.invalidos=Login or Password incorrect!
 
+tela.btn.entrar									=Enter
 tela.inicio.titulo								=System of Airline Ticket
 tela.inicio.labelTexto							=Welcome to System of Airline Ticket
 tela.inicio.labelnome							=Name
@@ -79,7 +80,7 @@ tela.consultarvoo.titulobox						=Status of Flights
 tela.cadDCliente.bebe                   		=Baby
 tela.cadDCliente.adulto                     	=Adults
 tela.cadDCliente.crianca                    	=Children
-
+tela.cadDCliente.qntClientes                   	=Number of Clients
 
 -----------------------
 rotulo.forma.trat=Title
