--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -76,6 +76,7 @@ tela.cadDCliente.sobrenome                  	=Sobrenome
 tela.cadDCliente.dataDeNascimento           	=Data de nascimento
 tela.cadDCliente.crianca                    	=Criança
 tela.cadDCliente.bebe                   		=Bebê
+tela.cadDCliente.qntClientes=Quantidade de Clientes
 
 
 tela.titulo.pagina								=Venda de Passagens
