--- a/src/exemplo_en_US.properties
+++ b/src/exemplo_en_US.properties
@@ -5,6 +5,7 @@ tela.login.labelSenha                           =Password
 tela.login.btnEntrar							=Enter
 tela.login.mensagem.invalidos=Login or Password incorrect!
 
+tela.home.vendaDePassagens						=Ticket Sales
 tela.btn.entrar									=Enter
 tela.inicio.titulo								=System of Airline Ticket
 tela.inicio.labelTexto							=Welcome to System of Airline Ticket
@@ -27,14 +28,35 @@ tela.menu.voo.cadastrar							=Register flight
 tela.menu.voo.editar							=Edit flight
 tela.menu.voo.excluir							=Delete flight
 tela.menu.voo.consultarstatus					=Status of flight
-
-tela.titulo.pagina=Ticket Sales
-tela.sispassagem	= System of Airline Ticket
-
 tela.menu.aeronave								=Aircraft
 tela.menu.aeronave.cadastrar					=Register Aircraft
 tela.menu.aeronave.editar						=Edit Aircraft
 tela.menu.aeronave.excluir						=Delete Aircraft
+
+tela.header.inicio              				=Home
+tela.header.voo                 				=Flight
+tela.header.cadastrar           				=Register
+tela.header.alterarExcluir      				=Change/Delete
+tela.header.statusDeVoo         				=Status of flight
+tela.header.aeronave           					=Aircraft
+tela.header.passagem            				=Ticket
+tela.header.comprar             				=Buy
+tela.header.cancelar            				=Cancel
+tela.header.transferir          				=Transfer
+tela.header.checkin             				=Check-in
+tela.header.trocarDeUsuario     				=Change User
+tela.header.sairDoSistema      					=Logout
+tela.home.vendaDePassagens						=Ticket Sales
+tela.home.bemVindo								=Welcome to System of Airline Ticket
+tela.home.supervisor							=Supervisor
+tela.home.atendente								=Attendant
+
+
+
+tela.titulo.pagina=Ticket Sales
+tela.sispassagem	= System of Airline Ticket
+
+
 voo.titulo							=System of Airline Ticket - Register flight
 voo.titulobox						=Enter the date of flight
 voo.lblaeronave					=Aircraft
@@ -65,9 +87,10 @@ tela.editaraeronave.titulo						=System of Airline ticket - Edit Aircraft
 tela.cadastraeronave.titulo						=System of Airline ticket - Register Aircraft
 tela.cadastraraeronave.titulobox				=Enter the date of flight
 lblCodigo				=Code
-tela.cadastraraeronave.lblNome					=Name
+tela.cadAeronave.nomeDaAeronave					=Name
 tela.cadastraraeronave.lblQtdAssentos			=Quantity of seats
-tela.cadastraraeronave.lblLocalAssentos			=Location of seats
+tela.cadAeronave.localDeAssentos			=Location of seats
+tela.cadAeronave.tipoDeAeronave	=Type of Aircraft
 tela.cadastraraeronave.btnCadastrar				=Register
 tela.cadastraraeronave.btnLimparCampos			=Clear fields
 tela.trnsferirpassagem.titulo					=System of Airline ticket - Transfer ticket
@@ -114,6 +137,10 @@ rotulo.banco=Bank
 rotulo.agencia=Agency
 rotulo.conta=Account
 
+cadastrar=Register
+consultar=Consult
+alterar=Change
+excluir=Delete
 
 mensagem.cadastrar.exito=Register Accomplished Successfully!
 mensagem.cadastrar.erro=Register not Accomplished Successfully!
