--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -76,7 +76,7 @@ tela.cadDCliente.sobrenome                  	=Sobrenome
 tela.cadDCliente.dataDeNascimento           	=Data de nascimento
 tela.cadDCliente.crianca                    	=Criança
 tela.cadDCliente.bebe                   		=Bebê
-tela.cadDCliente.qntClientes=Quantidade de Clientes
+tela.cadDCliente.qntClientes					=Quantidade de Clientes
 
 
 tela.titulo.pagina								=Venda de Passagens
@@ -160,6 +160,10 @@ rotulo.banco=Banco
 rotulo.agencia=Agência
 rotulo.conta=Conta
 
+cadastrar=Cadastrar
+consultar=Consultar
+alterar=Alterar
+excluir=Excluir
 
 mensagem.cadastrar.exito=Cadastro Realizado com Sucesso!
 mensagem.cadastrar.erro=Cadastro não Realizado com Sucesso!
