--- a/src/exemplo_en_US.properties
+++ b/src/exemplo_en_US.properties
@@ -3,7 +3,7 @@ tela.login.labelTexto                           =Perform Login
 tela.login.labelUsuario                         =User
 tela.login.labelSenha                           =Password
 tela.login.btnEntrar							=Enter
-tela.login.mensagem.invalidos=Login or Password incorrect!
+tela.login.mensagem.invalidos					=Login or Password incorrect!
 
 tela.home.vendaDePassagens						=Ticket Sales
 tela.btn.entrar									=Enter
@@ -53,21 +53,21 @@ tela.home.atendente								=Attendant
 
 
 
-tela.titulo.pagina=Ticket Sales
-tela.sispassagem	= System of Airline Ticket
+tela.titulo.pagina								=Ticket Sales
+tela.sispassagem								= System of Airline Ticket
 
 
-voo.titulo							=System of Airline Ticket - Register flight
-voo.titulobox						=Enter the date of flight
-voo.lblaeronave					=Aircraft
-voo.lbldata						=Date
-voo.lblhora						=Time
-voo.lblorigem						=Origin
-voo.lbldestino						=Destiny
-voo.lblescalas1						=Scale 1
-voo.lblescalas2						=Scale 2
-voo.lbltipo						=Type
-voo.lblvalor						=Value
+voo.titulo										=System of Airline Ticket - Register flight
+voo.titulobox									=Enter the date of flight
+voo.lblaeronave									=Aircraft
+voo.lbldata										=Date
+voo.lblhora										=Time
+voo.lblorigem									=Origin
+voo.lbldestino									=Destiny
+voo.lblescalas1									=Scale 1
+voo.lblescalas2									=Scale 2
+voo.lbltipo										=Type
+voo.lblvalor									=Value
 voo.lblstatus									=Status
 voo.cbstatus.escolha							= -- Choose Status --
 voo.cbstatus.confirmado							=Confirmee
@@ -86,11 +86,11 @@ tela.excluiraeronave.titulo						=System of Airline ticket - Delete Aircraft
 tela.editaraeronave.titulo						=System of Airline ticket - Edit Aircraft
 tela.cadastraeronave.titulo						=System of Airline ticket - Register Aircraft
 tela.cadastraraeronave.titulobox				=Enter the date of flight
-lblCodigo				=Code
+lblCodigo										=Code
 tela.cadAeronave.nomeDaAeronave					=Name
 tela.cadastraraeronave.lblQtdAssentos			=Quantity of seats
-tela.cadAeronave.localDeAssentos			=Location of seats
-tela.cadAeronave.tipoDeAeronave	=Type of Aircraft
+tela.cadAeronave.localDeAssentos				=Location of seats
+tela.cadAeronave.tipoDeAeronave					=Type of Aircraft
 tela.cadastraraeronave.btnCadastrar				=Register
 tela.cadastraraeronave.btnLimparCampos			=Clear fields
 tela.trnsferirpassagem.titulo					=System of Airline ticket - Transfer ticket
@@ -99,6 +99,22 @@ tela.cancelarpassagem.titulo					=System of Airline ticket - Cancel ticket
 tela.checkin.titulo								=System of Airline ticket - Check-In
 tela.consultarvoo.titulo						=System of Airline ticket - Status of flight
 tela.consultarvoo.titulobox						=Status of Flights
+
+tela.cadAeronave.cadastrar						=Register
+tela.cadAeronave.codigoDaAeronave				=Code of Aircraft
+tela.alterarAeronave.codDaAeronave				=Code of Aircraft
+tela.alterarAeronave.nomeDaAeronave				=Name
+tela.alterarAeronave.lblQtdAssentos				=Quantity of seats
+tela.alterarAeronave.localDeAssentos			=Location of seats
+tela.alterarAeronave.tipoDeAeronave				=Type of Aircraft
+tela.alterarAeronave.localizacaoAssentos		=Location of seats
+tela.alterarAeronave.colunas					=Coluns
+tela.alterarAeronave.fileiras					=Rows
+tela.alterarAeronave.alterar					=Change
+
+lblIda												=Go
+lblIda.volta										=Go and Back
+lblEscolheVoo										=Choose Flight
 
 tela.cadDCliente.bebe                   		=Baby
 tela.cadDCliente.adulto                     	=Adults
