--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -77,7 +77,9 @@ tela.cadDCliente.dataDeNascimento           	=Data de nascimento
 tela.cadDCliente.crianca                    	=Criança
 tela.cadDCliente.bebe                   		=Bebê
 tela.cadDCliente.qntClientes					=Quantidade de Clientes
-
+ida												=Ida
+ida.volta										=Ida e Volta
+btn.escolheVoo									=Escolher Voo
 
 tela.titulo.pagina								=Venda de Passagens
 tela.sispassagem								=Sistema de Passagens Aéreas
