--- a/src/exemplo_en_US.properties
+++ b/src/exemplo_en_US.properties
@@ -121,6 +121,11 @@ tela.cadDCliente.adulto                     	=Adults
 tela.cadDCliente.crianca                    	=Children
 tela.cadDCliente.qntClientes                   	=Number of Clients
 
+lblnumeroPassagem 								=Number of Ticket
+lblDadosPassagem								=Ticket Information
+lblResponsavelCompra							=Resposanvel Purchase
+lblVoltar										=Back
+lblProximo										=Next
 
 tela.btn.entrar  = Enter
 -----------------------
@@ -165,3 +170,5 @@ mensagem.alterar.exito=Change Accomplished Successfully!
 mensagem.alterar.erro=Change not Accomplished Successfully!
 mensagem.excluir.exito=Exclusion Accomplished Successfully!
 mensagem.excluir.erro=Exclusion not Accomplished Successfully!
+mensagem.checkin.exito=Check-in Accomplished Successfully!
+mensagem.checkin.erro=Ticket not Found!
