--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -10,7 +10,7 @@ tela.inicio.labelnome							=Nome
 tela.inicio.labelperfil							=Perfil de acesso
 tela.inicio.labelUsuario						=Usuario
 tela.inicio.labelData							=Data 
-tela.inicio.titulobox							=Informações do Usuario
+tela.inicio.titulobox							=Informações do Usuário
 tela.menu.ferramentas							=Ferramentas
 tela.menu.ferramentas.sair						=Sair
 tela.menu.ferramentas.logoff					=Encerrar
@@ -130,7 +130,11 @@ tela.consultarvoo.titulo						=Sistema de Passagens Aéreas - Consultar Status do
 tela.consultarvoo.titulobox						=Status dos Voos
 
 
-
+lblnumeroPassagem 								=Número da Passagem
+lblDadosPassagem								=Dados da Passagem
+lblResponsavelCompra							=Responsável da Compra
+lblVoltar										=Voltar
+lblProximo										=Próximo
 
 --------------------
 rotulo.forma.trat=Forma de Tratamento
@@ -174,3 +178,5 @@ mensagem.alterar.exito=Alteração Realizada com Sucesso!
 mensagem.alterar.erro=Alteração não Realizado com Sucesso!
 mensagem.excluir.exito=Exclusão Realizada com Sucesso!
 mensagem.excluir.erro=Exclusão não Realizado com Sucesso!
+mensagem.checkin.exito=Check-in realizado com Sucesso!
+mensagem.checkin.erro=Passagem não encontrada, verefique os dados e tente novamente!
